--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,112 @@
-body {
-    background: silver;
-
-}
-
-img {
-    border-radius: 2%;
-}
+header {
+    padding: 40px 0px 60px 0px;
+  }
+  
+  h1 {
+    font-family: 'Open Sans Condensed';font-size: 5.9vm;
+    text-align: center;
+    margin-bottom: -18px;
+   }
+    
+  #under-header {
+    font-family: 'Raleway';font-size: 12px;
+    text-align: center;
+  }
+  
+  .nav-bar {
+    background: #ff4d5b;
+    text-align: center;  
+    height: 50px;
+  }
+  
+  .nav-bar a {
+    font-family: 'Raleway';
+    font-size: 14;
+    font-weight: 500;
+    color: white;
+    margin: 14px 20px;
+  /*   margin-right: 50px; */
+    text-transform: uppercase;
+    display: inline-block;
+    text-decoration: none;  
+  }
+  
+  .nav-bar a:hover {
+    color: #444
+  }
+  
+  #header-image {
+    position: relative;
+    z-index: 1;
+  }
+  
+  #header-cover {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 1px;
+    background: black;
+    opacity: 75%;
+    z-index: 2;
+    color: white;
+  }
+  
+  .image-text {
+    text-align: center;
+    margin-top: 90px;
+    margin-bottom: 60px;
+  }
+  
+  .col-sm {
+    text-align: center;
+    padding: 60px 60px 60px 60px;
+    font-family: 'Raleway'
+  }
+  
+  h3 {
+    font-family: 'Open Sans Condensed';
+    font-size: 24px;
+    margin-bottom: 40px;
+  }
+  
+  .col-sm img {
+    display: inline-block;
+    margin: 1px auto;
+  }
+  
+  .col-sm p {
+    text-align: left;
+    margin-top: 25px;
+  }
+  
+  footer {
+    font-family: 'Open Sans Condensed';
+    font-size: 22px;
+    background-color: #454545;
+    color: white;
+    padding: 60px;
+    height: 250px;
+  }
+  
+  footer a {
+    color: #ff4d5b;
+    text-decoration: none;
+    font-family: 'Raleway';
+    font-size: 16px;
+  }
+  
+  #about-us {
+    float: left;
+    margin-right: 200px;
+  }
+  
+  #contact {
+    float: left;
+  }
+  
+  #contact ul {
+    font-family: Raleway;
+    font-size: 16px;
+  }
+  
+  
